--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Uninstaller App</string>
+    <string name="developer_name">Created by Sudo Ajay</string>
 
     <!--    Notification channel-->
     <string name="notifications_group_service">Service control</string>
@@ -25,8 +26,67 @@
 
     <!--  MainActivity  Bottom Toolbar-->
     <string name="action_search">Search</string>
+    <string name="filterList_optionMenu">Filter List</string>
     <string name="darkMode_optionMenu">Dark Mode</string>
     <string name="action_more_option">More Option</string>
+
+
+<!--    Filter Bottom sheet-->
+    <string name="filter_option_text">Filter Option</string>
+    <string name="title_menu_show">Show</string>
+    <string name="title_menu_order_by_trans">Order by</string>
+    <string name="menu_alphabetical_order_trans">Alphabetical order</string>
+    <string name="menu_installation_date_trans">Installation date</string>
+    <string name="menu_app_size_trans">App size</string>
+    <string name="menu_system_app_trans">System app</string>
+    <string name="menu_user_app_trans">User app</string>
+    <!--    Information text-->
+    <string name="at_least_one_item_text">You Can\'t Hide Both Item </string>
+
+
+    <!--    Setting Preference-->
+    <string name="system_setting_text">System Settings</string>
+    <string name="use_dark_mode_text">Use Dark Mode</string>
+    <string name="change_language_text">"Change Language "</string>
+    <string name="clear_cache_text">Clear Cache</string>
+    <string name="help_support_text">Help &amp; Support</string>
+    <string name="privacy_policy_text">Privacy Policy</string>
+    <string name="report_a_bug_text">Report A Bug</string>
+    <string name="report_a_bug_summary_text">submit an issue on Github issue page</string>
+    <string name="send_feedback_text">Send Feedback</string>
+    <string name="send_feedback_summary_text">submit feedback to fix the app bug</string>
+    <string name="more_info_text">More Info</string>
+    <string name="share_app_text">Share App</string>
+    <string name="rate_use_text">Rate-Us</string>
+    <string name="more_app_text">More App</string>
+    <string name="about_app_text">About App</string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="share_app_summary_text">share the play store app link</string>
+    <string name="rate_use_summary_text">express your experience through rating</string>
+    <string name="more_app_summary_text">there is more app out there</string>
+    <string name="about_app_summary_text">open github link</string>
+
+    <!--    Send Feedback -->
+    <string name="feedbackEditTextHint">Please write your feedback</string>
+    <string name="feedbackEditTextError">Please write something in feedback</string>
+    <string name="systemInfo_text">Your System Info will be send to our developer team</string>
+    <string name="add_screenshot_text">+ Add Screenshot</string>
+    <string name="ok_text">OK</string>
+    <!--    System Info-->
+    <string name="system_info_text"> System Info </string>
+    <string name="device_text">Device : </string>
+    <string name="os_api_level_text">Os Api Level : </string>
+    <string name="app_version_text">App Version : </string>
+    <string name="language_text">Language : </string>
+    <string name="total_memory_text">Total Heap Memory : </string>
+    <string name="free_memory_text">Free Heap Memory : </string>
+    <string name="screen_Text">Screen Size : </string>
+    <string name="network_type_text">Network Type : </string>
+
+    <!--    Share App-->
+    <string name="shareMessage">Hey, check This App which helps you to Delete Duplicate and Unnecessary Data from the phone -</string>
+
+
 
     <!--        No Trans-->
 
@@ -38,4 +98,13 @@
     <string name="automatic_at_sunset_text" translatable="false">Automatic at sunset</string>
     <string name="set_by_battery_saver_text" translatable="false">Set by battery saver</string>
     <string name="system_default_text" translatable="false">System Default</string>
+
+
+    <!--    FilterDnsBottomSheet Not Trans-->
+    <string name="title_menu_order_by" translatable="false">Order by</string>
+    <string name="menu_alphabetical_order" translatable="false">Alphabetical order</string>
+    <string name="menu_installation_date" translatable="false">Installation date</string>
+    <string name="menu_app_size" translatable="false">App size</string>
+    <string name="menu_system_app" translatable="false">System apps</string>
+    <string name="menu_user_app" translatable="false">User apps</string>
 </resources>
